# automatic-cruise

./: .gitignore  .gitmodules  ACCVehicle.cpp  ACCVehicle.h  CMakeLists.txt  Doxyfile  Error.h  Foliage2D.cpp  Foliage2D.h  Highway.cpp  Highway.h  Interval.h  LICENCE.txt  Lane.cpp  Lane.h  Main.cpp  Neighbours.cpp  Neighbours.h  RandomVehicle.cpp  RandomVehicle.h  Readme.md  Simulation.cpp  Simulation.h  Slides.md  Target.h  UIPresenter.cpp  UIPresenter.h  UserInterface.cpp  UserInterface.h  Vehicle.cpp  Vehicle.h  Window.cpp  Window.h  Window2D.cpp  Window2D.h  build-doc.sh  imgui_impl_glfw.cpp  imgui_impl_glfw.h
SOIL/: CMakeLists.txt
doc/: SlidesEN.md  SlidesRO.md  customdoxygen.css  index.html  slides.html  slides_en.html  slides_ro.html
